--- a/assets/scss/_light.scss
+++ b/assets/scss/_light.scss
@@ -25,7 +25,7 @@ body.light {
         background-color: $white;
 
         .sidebar-profile {
-            border-bottom: 2px solid #F5F5F5;
+            border-bottom: 2px solid #dee2e6;
 
             .theme-toggle {
                 label {
@@ -41,7 +41,7 @@ body.light {
 
         ul.menu {
             &::-webkit-scrollbar-track {
-                background: #f5f5f5;
+                background: #dee2e6;
             }
 
             li a {
@@ -50,7 +50,7 @@ body.light {
         }
 
         .sidebar-footer {
-            border-top: 2px solid #F5F5F5;
+            border-top: 2px solid #dee2e6;
         }
     }
 
@@ -97,6 +97,14 @@ body.light {
                 background-color: $white;
 
             }
+        }
+    }
+
+    .content-box {
+        .content-box-item {
+            background-color: $white;
+            color: $black;
+            border: 1px solid #dee2e6;
         }
     }
 }
