--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,6 +70,14 @@ label {
   clear: both;
 }
 
+.navbar-offset {
+  margin-top: 54px;
+}
+
+.bottombar-offset {
+  margin-bottom: 70px;
+}
+
 .preload {
   height: 100%;
   width: 100%;
@@ -179,7 +187,7 @@ label {
   height: 100%;
   right: 0;
   display: none;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 29;
 }
 
@@ -336,7 +344,7 @@ label {
   height: 100%;
   right: 0;
   display: none;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 27;
 }
 
@@ -538,9 +546,91 @@ label {
   }
 }
 
+.content-box {
+  width: 100%;
+  column-count: 1;
+  column-gap: 15px;
+
+  .content-box-item {
+    display: inline-block;
+    width: auto;
+    padding: 15px;
+    box-sizing: border-box;
+    margin: 0 0 15px 0;
+
+
+    .profile-image {
+      float: left;
+      width: 55px;
+
+      .profile-image-inner {
+        width: 40px;
+        height: 40px;
+        margin: 0 15px 0 0;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img {
+          height: 100%;
+        }
+      }
+    }
+
+    .content {
+      float: left;
+      width: calc(100% - 55px);
+
+      .username {
+        font-family: $poppins-semibold;
+        font-size: 14px;
+        margin: 0 0 15px 0;
+
+        .verified {
+          color: $primary;
+        }
+      }
+
+      .post {
+        font-size: 14px;
+        margin: 0;
+      }
+    }
+
+    .footer {
+      margin: 15px 0 0 0;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+
+      .footer-item {
+        font-size: 14px;
+        text-decoration: none;
+        margin-left: 15px;
+
+        span {
+          font-size: 14px;
+          margin-left: 5px;
+        }
+      }
+    }
+  }
+}
+
 @include media-breakpoint-down(sm) {
   .share-modal {
     width: 90%;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .content-box {
+    column-count: 2;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .content-box {
+    column-count: 3;
   }
 }
 
