--- a/assets/scss/_light.scss
+++ b/assets/scss/_light.scss
@@ -2,6 +2,10 @@ body.light {
     background-color: $white;
     color: $black;
 
+    i i {
+        text-shadow: -2px -2px 0 $white, 2px -2px 0 $white, -2px 2px 0 $white, 2px 2px $white;
+    }
+
     .preload {
         background-color: $white;
 
@@ -13,6 +17,10 @@ body.light {
 
     .share-modal {
         background-color: $white;
+
+        .share-title {
+            border-bottom: 1px solid #dee2e6;
+        }
 
         .share-menu {
             .share-menu-item {
@@ -40,9 +48,6 @@ body.light {
         }
 
         ul.menu {
-            &::-webkit-scrollbar-track {
-                background: #dee2e6;
-            }
 
             li a {
                 color: $black;
